Use android DTB, enable AB boot

--- a/configs/odroid_rk3588s_defconfig
+++ b/configs/odroid_rk3588s_defconfig
@@ -188,7 +188,7 @@ CONFIG_ROCKCHIP_DTB_VERIFY=y
 CONFIG_ROCKCHIP_FIT_IMAGE=y
 CONFIG_ROCKCHIP_UIMAGE=y
 CONFIG_ROCKCHIP_EARLY_DISTRO_DTB=y
-CONFIG_ROCKCHIP_EARLY_DISTRO_DTB_PATH="rk3588s-odroid-m2.dtb"
+CONFIG_ROCKCHIP_EARLY_DISTRO_DTB_PATH="rk3588s-odroid-m2-android.dtb"
 # CONFIG_ROCKCHIP_HWID_DTB is not set
 # CONFIG_ROCKCHIP_VENDOR_PARTITION is not set
 CONFIG_USING_KERNEL_DTB=y
@@ -375,7 +375,7 @@ CONFIG_DISPLAY_BOARDINFO=y
 # Android features support
 #
 CONFIG_ANDROID_BOOTLOADER=y
-# CONFIG_ANDROID_AB is not set
+CONFIG_ANDROID_AB=y
 CONFIG_ANDROID_WRITE_KEYBOX=y
 CONFIG_ANDROID_AVB=y
 # CONFIG_ANDROID_AVB_ROLLBACK_INDEX is not set
